--- a/prueba1-vite/src/components/NavBar/NavBar.css
+++ b/prueba1-vite/src/components/NavBar/NavBar.css
@@ -5,8 +5,9 @@
     margin: 0;
 }
 .navbar{
-    background-color: rgba(23, 23, 158, 0.897);
+    background-color: rgb(7, 7, 66);
 }
 .navbar a{
     color: rgba(233, 206, 54, 0.993);
+    font-size: 20px;
 }
